--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -2393,6 +2393,24 @@
         "th":"",
         "id":""
     },
+    "skills.talent.point-used":{
+        "en":"Points Used",
+        "fr":"Points Utilisé",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "skills.TMD_STAFF_EXPERTISE.name":{
         "en":"Staff Expertise",
         "fr":"Expertise des Arcanes",
