--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -2411,6 +2411,24 @@
         "th":"",
         "id":""
     },
+    "skills.talent.requires-expertise":{
+        "en":"Requires {0} Expertise at {1}",
+        "fr":"Requirs {0} d'expertise en {1}",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "skills.TMD_STAFF_EXPERTISE.name":{
         "en":"Staff Expertise",
         "fr":"Expertise des Arcanes",
