new costume +talent typo

--- a/Translation/item.json
+++ b/Translation/item.json
@@ -5075,6 +5075,114 @@
         "th":"",
         "id":""
     },
+    "item.5012.name":{
+        "en":"Jacket M",
+        "fr":"Veste H",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.5013.name":{
+        "en":"Brown Jacket M",
+        "fr":"Veste Marron M",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.5014.name":{
+        "en":"Red Jacket M",
+        "fr":"Veste Rouge H",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.5015.name":{
+        "en":"Yellow Uniform F",
+        "fr":"Uniform Jaune F",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.5016.name":{
+        "en":"Orange Uniform F",
+        "fr":"Uniforme Orange F",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.5017.name":{
+        "en":"White Uniform F",
+        "fr":"Uniforme Blanc F",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.6000.name": {
 		"en": "Initlal Hairstyle (Green)",
 		"fr": "Coiffure Initiale (Vert)",
