VI-Talents and more

--- a/Translation/general.json
+++ b/Translation/general.json
@@ -1000,7 +1000,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cài Lại",
         "ar":"",
         "it":"",
         "pl":"",
