--- a/Translation/item.json
+++ b/Translation/item.json
@@ -2944,7 +2944,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Thây Ma ",
+        "vi":"[Linh Trứng] Thây Ma",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3448,7 +3448,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Nham Thân Cận",
+        "vi":"[Linh Trứng] Nham Tiểu Ác Ma",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3484,7 +3484,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Đôi Lửa",
+        "vi":"[Linh Trứng] Song Lửa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3502,7 +3502,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Hỏa Diệm lửa",
+        "vi":"[Linh Trứng] Hỏa Diệm Lửa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4618,7 +4618,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hỏa Diệm lửa",
+        "vi":"Hỏa Diệm Lửa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4905,8 +4905,8 @@
         "tr":"",
         "de":"",
         "jp":"",
-        "pt":"Hỏa Nung Giáp Xích Nam",
-        "vi":"",
+        "pt":"",
+        "vi":"Hỏa Nung Giáp Xích Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4978,7 +4978,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Áo Choàng Thắt Đỏ Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4996,7 +4996,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Áo Choàng Thắt Tím Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5014,7 +5014,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Áo Choàng Thắt Xám Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5032,7 +5032,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Áo Thắt Dài Đỏ Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5050,7 +5050,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Áo Thắt Dài Tím Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5068,7 +5068,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Áo Thắt Dài Xám Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5086,7 +5086,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Áo Khoác Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5104,7 +5104,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Áo Khoác Nâu Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5122,7 +5122,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Áo Khoác Đỏ Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5140,7 +5140,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đồng Phục Vàng Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5158,7 +5158,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đồng Phục Cam Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5176,7 +5176,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đồng Phục Trắng Nữ",
         "ar":"",
         "it":"",
         "pl":"",
