--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -172,7 +172,7 @@
         "de":"Mod Stats",
         "jp":"",
         "pt":"",
-        "vi":"Thuộc Tính Nâng cấp",
+        "vi":"Thuộc Tính Nâng Cấp",
         "ar":"",
         "it":"",
         "pl":"",
