--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4978,7 +4978,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Áo Choàng Thắt Đỏ Nam",
+        "vi":"Áo Choàng Đỏ Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4996,7 +4996,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Áo Choàng Thắt Tím Nam",
+        "vi":"Áo Choàng Tím Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5014,7 +5014,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Áo Choàng Thắt Xám Nam",
+        "vi":"Áo Choàng Xám Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5032,7 +5032,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Áo Thắt Dài Đỏ Nữ",
+        "vi":"Áo Thắt Ngang Đỏ Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5050,7 +5050,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Áo Thắt Dài Tím Nữ",
+        "vi":"Áo Thắt Ngang Tím Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5068,7 +5068,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Áo Thắt Dài Xám Nữ",
+        "vi":"Áo Thắt Ngang Xám Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5086,7 +5086,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Áo Khoác Nam",
+        "vi":"Bộ Thanh Lịch Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5104,7 +5104,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Áo Khoác Nâu Nam",
+        "vi":"Bộ Thanh Lịch Nâu Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5122,7 +5122,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Áo Khoác Đỏ Nam",
+        "vi":"Bộ Thanh Lịch Đỏ Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5194,7 +5194,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bộ Trang Phục Đen Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5212,7 +5212,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bộ Trang Phục Trắng Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5230,7 +5230,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bộ Trang Phục Tím Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5248,7 +5248,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Váy Đỏ Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5266,7 +5266,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Váy Tím Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5284,7 +5284,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Váy Cam Nữ",
         "ar":"",
         "it":"",
         "pl":"",
