--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -5590,7 +5590,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Tăng Chuẩn Xác Kỹ Năng thêm 5%.",
+        "vi": "Chuẩn Xác Kỹ Năng +5%.",
         "ar": "",
         "it": "",
         "pl": "",
